# Library-ElrahAPI

./: .gitignore  CNAME  MANIFEST.in  README.md  _config.yml  pyproject.toml  requirements.txt  setup.py
docs/: README.md  documentation.md  guide.md
elrahapi/: .gitignore  README.md  __main__.py  setup.py
elrahapi/authentication/: authenticate.py  authentication_manager.py  authentication_namespace.py  authentication_provider.py  authentication_router_provider.py
elrahapi/authorization/: base_meta_model.py  meta_model.py  privilege_model.py  role_model.py  role_privilege_model.py  user_privilege_model.py  user_role_model.py
elrahapi/crud/: base_crud_forgery.py  bulk_models.py  crud_forgery copy.py  crud_forgery.py  crud_models.py  relation_crud_forgery.py  user_crud_forgery.py
elrahapi/database/: database_manager.py  seed_manager.py  seeder_manager.py  session_manager.py
elrahapi/elrahapi/: __main__.py
elrahapi/elrahsettings/: models.py
elrahapi/exception/: auth_exception.py  exceptions_utils.py
elrahapi/main/: .env  .env.example  main.py  seed.py
elrahapi/middleware/: crud_middleware.py  error_middleware.py  log_middleware.py  models.py
elrahapi/otp_setup/: otp_auth.py
elrahapi/relationship/: base_relationship.py  many_to_many_class.py  many_to_many_table.py  many_to_one.py  one_to_many.py  one_to_one.py
elrahapi/router/: model_relation.py  relation_model.py  relationship.py  route_additional_config.py  route_config.py  router_crud.py  router_default_routes_name.py  router_namespace.py  (+3 more)
harlequelrah_fastapi/: .gitignore  README.md  setup.py
(+177 files in other folders)
